--- a/events.html
+++ b/events.html
@@ -92,10 +92,12 @@
                 <a href="index.php"><img class="logo" src="./imgs/webLogo.png"/></a>
 
                 <ul class="nav ml-auto">
-                    <li class="nav-item events"><a class="navList" href="events.html">Events</a></li>
-                    
+                    <li class="nav-item events"><a class="navList" href="watchus.html" target="_blank">Watch Us</a></li>
+
+                    <li class="nav-item events"><a class="navList" href="events.html" target="_blank">Events</a></li>
+
                     <li class="nav-item blog"><a class="navList" href="blog.html"s target="_blank">Blog</a></li>
-                    
+
                     <li class="nav-item team"><a class="navList" href="team.html" target="_blank">Team</a></li>
                 </ul>
             </nav>
