--- a/watchus.html
+++ b/watchus.html
@@ -73,7 +73,7 @@
     <body>
         <header>
             <nav class="navbar transparent ">
-                <img class="logo" src="./imgs/webLogo.png"/>
+                <a href="index.html"><img class="logo" src="./imgs/webLogo.png"/></a>
 
                 <ul class="nav ml-auto">
                     <ul class="nav ml-auto">
