Add home button in navbar

--- a/index.html
+++ b/index.html
@@ -103,14 +103,15 @@
 
                 <div class="">
                     <ul class="nav ml-auto">
-                        <li class="nav-item events"><a class="navList" href="watchus.html" target="_blank">Watch Us</a></li>
+                        <li class="nav-item events"><a class="navList" href="index.html">Home</a></li>
 
-                        <li class="nav-item events"><a class="navList" href="events.html" target="_blank">Events</a></li>
+                        <li class="nav-item events"><a class="navList" href="watchus.html">Watch Us</a></li>
 
-                        <li class="nav-item blog"><a class="navList" href="blog.html"s target="_blank">Blog</a></li>
+                        <li class="nav-item events"><a class="navList" href="events.html">Events</a></li>
 
-                        <li class="nav-item team"><a class="navList" href="team.html" target="_blank">Team</a></li>
+                        <li class="nav-item blog"><a class="navList" href="blog.html">Blog</a></li>
 
+                        <li class="nav-item team"><a class="navList" href="team.html">Team</a></li>
                     </ul>
                 </div>
             </nav>
